docs: Updating Wizard/Template information (#14580) chore: Tidying up
* docs: Adjusting wizard

* docs: Updating template info

* docs: Updating more wizard options

* docs: Updating solution structure

* Merge branch 'master' into dev/nr/solutionarchitecture

--- a/doc/articles/toc.yml
+++ b/doc/articles/toc.yml
@@ -335,7 +335,7 @@
       items:
       - name: Features List
         href: supported-features.md
-      - name: Feature flags
+      - name: Feature Flags
         href: feature-flags.md
       - name: WinUI Compatibility
         items:
